--- a/nodejs-app/package.json
+++ b/nodejs-app/package.json
@@ -7,7 +7,7 @@
   "license": "ASL",
   "dependencies": {
     "express": "4.14.x",
-    "html-errors": "latest"
+    "html-error": "latest"
   },
   "scripts":{
     "start":"node server.js"
